// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Facets 2 Facets configured, no filters 1`] = `
Object {
  "_source": Object {
    "includes": Array [
      "facet1",
    ],
  },
  "aggs": Object {
    "facet_bucket_all": Object {
      "aggs": Object {
        "actors": Object {
          "terms": Object {
            "field": "actors",
            "size": 5,
          },
        },
        "writers": Object {
          "terms": Object {
            "field": "writers",
            "size": 5,
          },
        },
      },
      "filter": Object {
        "bool": Object {
          "must": Array [],
        },
      },
    },
  },
  "from": 0,
  "size": 0,
  "sort": Array [
    Object {
      "_score": "desc",
    },
  ],
}
`;

exports[`Facets 2 Facets configured, no filters 2`] = `
Object {
  "facets": Array [
    Object {
      "display": "ListFacet",
      "entries": Array [
        Object {
          "count": 83,
          "label": "J.J. Abrams",
        },
        Object {
          "count": 74,
          "label": "Jeffrey Lieber",
        },
        Object {
          "count": 73,
          "label": "Damon Lindelof",
        },
        Object {
          "count": 53,
          "label": "James Manos Jr.",
        },
        Object {
          "count": 53,
          "label": "Jeff Lindsay",
        },
      ],
      "identifier": "writers",
      "label": "Writers",
      "type": "RefinementSelectFacet",
    },
    Object {
      "display": "ListFacet",
      "entries": Array [
        Object {
          "count": 73,
          "label": "Naveen Andrews",
        },
        Object {
          "count": 56,
          "label": "Jennifer Carpenter",
        },
        Object {
          "count": 56,
          "label": "Michael C. Hall",
        },
        Object {
          "count": 53,
          "label": "Emilie de Ravin",
        },
        Object {
          "count": 42,
          "label": "Jared Padalecki",
        },
      ],
      "identifier": "actors",
      "label": "Actors",
      "type": "RefinementSelectFacet",
    },
  ],
  "hits": Object {
    "items": Array [],
    "page": Object {
      "from": 0,
      "pageNumber": NaN,
      "size": 0,
      "total": 4162,
      "totalPages": Infinity,
    },
  },
  "sortedBy": undefined,
  "summary": Object {
    "appliedFilters": Array [],
    "disabledFilters": Array [],
    "query": "",
    "sortOptions": Array [],
    "total": 4162,
  },
}
`;

exports[`Facets 2 Facets configured, with two filters in each facet 1`] = `
Object {
  "_source": Object {
    "includes": Array [],
  },
  "aggs": Object {
    "facet_bucket_all": Object {
      "aggs": Object {
        "actors": Object {
          "terms": Object {
            "field": "actors",
            "size": 5,
          },
        },
        "writers": Object {
          "terms": Object {
            "field": "writers",
            "size": 5,
          },
        },
      },
      "filter": Object {
        "bool": Object {
          "must": Array [
            Object {
              "bool": Object {
                "must": Array [
                  Object {
                    "term": Object {
                      "writers": "writer1",
                    },
                  },
                ],
              },
            },
            Object {
              "bool": Object {
                "must": Array [
                  Object {
                    "term": Object {
                      "actors": "actors",
                    },
                  },
                ],
              },
            },
          ],
        },
      },
    },
  },
  "from": 0,
  "post_filter": Object {
    "bool": Object {
      "must": Array [
        Object {
          "bool": Object {
            "must": Array [
              Object {
                "term": Object {
                  "writers": "writer1",
                },
              },
            ],
          },
        },
        Object {
          "bool": Object {
            "must": Array [
              Object {
                "term": Object {
                  "actors": "actors",
                },
              },
            ],
          },
        },
      ],
    },
  },
  "size": 0,
  "sort": Array [
    Object {
      "_score": "desc",
    },
  ],
}
`;

exports[`Facets 2 Facets configured, with two filters in each facet 2`] = `
Object {
  "facets": Array [
    Object {
      "display": "ListFacet",
      "entries": Array [
        Object {
          "count": 83,
          "label": "J.J. Abrams",
        },
        Object {
          "count": 74,
          "label": "Jeffrey Lieber",
        },
        Object {
          "count": 73,
          "label": "Damon Lindelof",
        },
        Object {
          "count": 53,
          "label": "James Manos Jr.",
        },
        Object {
          "count": 53,
          "label": "Jeff Lindsay",
        },
      ],
      "identifier": "writers",
      "label": "Writers",
      "type": "RefinementSelectFacet",
    },
    Object {
      "display": "ListFacet",
      "entries": Array [
        Object {
          "count": 73,
          "label": "Naveen Andrews",
        },
        Object {
          "count": 56,
          "label": "Jennifer Carpenter",
        },
        Object {
          "count": 56,
          "label": "Michael C. Hall",
        },
        Object {
          "count": 53,
          "label": "Emilie de Ravin",
        },
        Object {
          "count": 42,
          "label": "Jared Padalecki",
        },
      ],
      "identifier": "actors",
      "label": "Actors",
      "type": "RefinementSelectFacet",
    },
  ],
  "hits": Object {
    "items": Array [],
    "page": Object {
      "from": 0,
      "pageNumber": NaN,
      "size": 0,
      "total": 4162,
      "totalPages": Infinity,
    },
  },
  "sortedBy": undefined,
  "summary": Object {
    "appliedFilters": Array [
      Object {
        "display": "ListFacet",
        "id": "writers_writer1",
        "identifier": "writers",
        "label": "Writers",
        "type": "ValueSelectedFilter",
        "value": "writer1",
      },
      Object {
        "display": "ListFacet",
        "id": "actors_actors",
        "identifier": "actors",
        "label": "Actors",
        "type": "ValueSelectedFilter",
        "value": "actors",
      },
    ],
    "disabledFilters": Array [],
    "query": "",
    "sortOptions": Array [],
    "total": 4162,
  },
}
`;

exports[`Facets 2 Facets configured, with two filters in each facet, specify a particular facet only to be returned 1`] = `
Object {
  "_source": Object {
    "includes": Array [],
  },
  "aggs": Object {
    "facet_bucket_all": Object {
      "aggs": Object {
        "writers": Object {
          "terms": Object {
            "field": "writers",
            "size": 5,
          },
        },
      },
      "filter": Object {
        "bool": Object {
          "must": Array [
            Object {
              "bool": Object {
                "must": Array [
                  Object {
                    "term": Object {
                      "writers": "writer1",
                    },
                  },
                ],
              },
            },
          ],
        },
      },
    },
  },
  "from": 0,
  "post_filter": Object {
    "bool": Object {
      "must": Array [
        Object {
          "bool": Object {
            "must": Array [
              Object {
                "term": Object {
                  "writers": "writer1",
                },
              },
            ],
          },
        },
        Object {
          "bool": Object {
            "must": Array [
              Object {
                "term": Object {
                  "actors": "actors",
                },
              },
            ],
          },
        },
      ],
    },
  },
  "size": 0,
  "sort": Array [
    Object {
      "_score": "desc",
    },
  ],
}
`;

exports[`Facets 2 Facets configured, with two filters in each facet, specify a particular facet only to be returned 2`] = `
Object {
  "facets": Array [
    Object {
      "display": "ListFacet",
      "entries": Array [
        Object {
          "count": 83,
          "label": "J.J. Abrams",
        },
        Object {
          "count": 74,
          "label": "Jeffrey Lieber",
        },
        Object {
          "count": 73,
          "label": "Damon Lindelof",
        },
        Object {
          "count": 53,
          "label": "James Manos Jr.",
        },
        Object {
          "count": 53,
          "label": "Jeff Lindsay",
        },
      ],
      "identifier": "writers",
      "label": "Writers",
      "type": "RefinementSelectFacet",
    },
  ],
  "hits": Object {
    "items": Array [],
    "page": Object {
      "from": 0,
      "pageNumber": NaN,
      "size": 0,
      "total": 4162,
      "totalPages": Infinity,
    },
  },
  "sortedBy": undefined,
  "summary": Object {
    "appliedFilters": Array [
      Object {
        "display": "ListFacet",
        "id": "writers_writer1",
        "identifier": "writers",
        "label": "Writers",
        "type": "ValueSelectedFilter",
        "value": "writer1",
      },
    ],
    "disabledFilters": Array [
      Object {
        "disabled": true,
        "identifier": "actors",
      },
    ],
    "query": "",
    "sortOptions": Array [],
    "total": 4162,
  },
}
`;

exports[`Facets 2 Facets configured, with two filters in each facet, specify both facets to be returned (test multiple works) 1`] = `
Object {
  "_source": Object {
    "includes": Array [],
  },
  "aggs": Object {
    "facet_bucket_all": Object {
      "aggs": Object {
        "actors": Object {
          "terms": Object {
            "field": "actors",
            "size": 5,
          },
        },
        "writers": Object {
          "terms": Object {
            "field": "writers",
            "size": 5,
          },
        },
      },
      "filter": Object {
        "bool": Object {
          "must": Array [
            Object {
              "bool": Object {
                "must": Array [
                  Object {
                    "term": Object {
                      "writers": "writer1",
                    },
                  },
                ],
              },
            },
            Object {
              "bool": Object {
                "must": Array [
                  Object {
                    "term": Object {
                      "actors": "actors",
                    },
                  },
                ],
              },
            },
          ],
        },
      },
    },
  },
  "from": 0,
  "post_filter": Object {
    "bool": Object {
      "must": Array [
        Object {
          "bool": Object {
            "must": Array [
              Object {
                "term": Object {
                  "writers": "writer1",
                },
              },
            ],
          },
        },
        Object {
          "bool": Object {
            "must": Array [
              Object {
                "term": Object {
                  "actors": "actors",
                },
              },
            ],
          },
        },
      ],
    },
  },
  "size": 0,
  "sort": Array [
    Object {
      "_score": "desc",
    },
  ],
}
`;

exports[`Facets 2 Facets configured, with two filters in each facet, specify both facets to be returned (test multiple works) 2`] = `
Object {
  "facets": Array [
    Object {
      "display": "ListFacet",
      "entries": Array [
        Object {
          "count": 83,
          "label": "J.J. Abrams",
        },
        Object {
          "count": 74,
          "label": "Jeffrey Lieber",
        },
        Object {
          "count": 73,
          "label": "Damon Lindelof",
        },
        Object {
          "count": 53,
          "label": "James Manos Jr.",
        },
        Object {
          "count": 53,
          "label": "Jeff Lindsay",
        },
      ],
      "identifier": "writers",
      "label": "Writers",
      "type": "RefinementSelectFacet",
    },
    Object {
      "display": "ListFacet",
      "entries": Array [
        Object {
          "count": 73,
          "label": "Naveen Andrews",
        },
        Object {
          "count": 56,
          "label": "Jennifer Carpenter",
        },
        Object {
          "count": 56,
          "label": "Michael C. Hall",
        },
        Object {
          "count": 53,
          "label": "Emilie de Ravin",
        },
        Object {
          "count": 42,
          "label": "Jared Padalecki",
        },
      ],
      "identifier": "actors",
      "label": "Actors",
      "type": "RefinementSelectFacet",
    },
  ],
  "hits": Object {
    "items": Array [],
    "page": Object {
      "from": 0,
      "pageNumber": NaN,
      "size": 0,
      "total": 4162,
      "totalPages": Infinity,
    },
  },
  "sortedBy": undefined,
  "summary": Object {
    "appliedFilters": Array [
      Object {
        "display": "ListFacet",
        "id": "writers_writer1",
        "identifier": "writers",
        "label": "Writers",
        "type": "ValueSelectedFilter",
        "value": "writer1",
      },
      Object {
        "display": "ListFacet",
        "id": "actors_actors",
        "identifier": "actors",
        "label": "Actors",
        "type": "ValueSelectedFilter",
        "value": "actors",
      },
    ],
    "disabledFilters": Array [],
    "query": "",
    "sortOptions": Array [],
    "total": 4162,
  },
}
`;

exports[`Facets facet overrides possible via facet array 1`] = `
Object {
  "_source": Object {
    "includes": Array [],
  },
  "aggs": Object {
    "facet_bucket_all": Object {
      "aggs": Object {
        "actors": Object {
          "terms": Object {
            "field": "actors",
            "size": 10,
          },
        },
        "writers": Object {
          "terms": Object {
            "field": "writers",
            "include": "([a-zA-Z]+ )+?[wW][rR][iI][tT][eE][rR][sS]Q[uU][eE][rR][yY].*",
            "size": 5,
          },
        },
      },
      "filter": Object {
        "bool": Object {
          "must": Array [
            Object {
              "bool": Object {
                "must": Array [
                  Object {
                    "term": Object {
                      "writers": "writer1",
                    },
                  },
                ],
              },
            },
            Object {
              "bool": Object {
                "must": Array [
                  Object {
                    "term": Object {
                      "actors": "actors",
                    },
                  },
                ],
              },
            },
          ],
        },
      },
    },
  },
  "from": 0,
  "post_filter": Object {
    "bool": Object {
      "must": Array [
        Object {
          "bool": Object {
            "must": Array [
              Object {
                "term": Object {
                  "writers": "writer1",
                },
              },
            ],
          },
        },
        Object {
          "bool": Object {
            "must": Array [
              Object {
                "term": Object {
                  "actors": "actors",
                },
              },
            ],
          },
        },
      ],
    },
  },
  "size": 0,
  "sort": Array [
    Object {
      "_score": "desc",
    },
  ],
}
`;

exports[`Facets facet overrides possible via facet array 2`] = `
Object {
  "facets": Array [
    Object {
      "display": "ListFacet",
      "entries": Array [
        Object {
          "count": 83,
          "label": "J.J. Abrams",
        },
        Object {
          "count": 74,
          "label": "Jeffrey Lieber",
        },
        Object {
          "count": 73,
          "label": "Damon Lindelof",
        },
        Object {
          "count": 53,
          "label": "James Manos Jr.",
        },
        Object {
          "count": 53,
          "label": "Jeff Lindsay",
        },
      ],
      "identifier": "writers",
      "label": "Writers",
      "type": "RefinementSelectFacet",
    },
    Object {
      "display": "ListFacet",
      "entries": Array [
        Object {
          "count": 73,
          "label": "Naveen Andrews",
        },
        Object {
          "count": 56,
          "label": "Jennifer Carpenter",
        },
        Object {
          "count": 56,
          "label": "Michael C. Hall",
        },
        Object {
          "count": 53,
          "label": "Emilie de Ravin",
        },
        Object {
          "count": 42,
          "label": "Jared Padalecki",
        },
      ],
      "identifier": "actors",
      "label": "Actors",
      "type": "RefinementSelectFacet",
    },
  ],
  "hits": Object {
    "items": Array [],
    "page": Object {
      "from": 0,
      "pageNumber": NaN,
      "size": 0,
      "total": 4162,
      "totalPages": Infinity,
    },
  },
  "sortedBy": undefined,
  "summary": Object {
    "appliedFilters": Array [
      Object {
        "display": "ListFacet",
        "id": "writers_writer1",
        "identifier": "writers",
        "label": "Writers",
        "type": "ValueSelectedFilter",
        "value": "writer1",
      },
      Object {
        "display": "ListFacet",
        "id": "actors_actors",
        "identifier": "actors",
        "label": "Actors",
        "type": "ValueSelectedFilter",
        "value": "actors",
      },
    ],
    "disabledFilters": Array [],
    "query": "",
    "sortOptions": Array [],
    "total": 4162,
  },
}
`;
